# FlappyBirdCPP-main

./: .gitignore  CMakeLists.txt  README.md  game.cpp
docs/: game.js  game.wasm  index.html
